# Bus-Conductor-Backend

./: .gitignore  pyproject.toml
src/: main.py
src/api/routes/: auth.py  search.py  stop.py  ticket.py
src/core/: database.py
src/dao/: search_dao.py  stop_dao.py
src/dependencies/: auth.py
src/models/: __init__.py  bus.py  bus_route.py  edge.py  route.py  route_stop.py  stop.py  ticket.py  user.py
src/schemas/: signup.py  stop_schema.py  ticket_response.py
src/services/: auth_service.py  search_service.py  stop_service.py  ticket_service.py
src/types/: search_types.py
src/utility/: auth_utility.py  google_auth.py
